<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pref_cells"
        android:icon="@drawable/format_column"
        android:title="@string/add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete_header"
        android:icon="@drawable/ic_delete_forever_button"
        android:title="@string/add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        app:showAsAction="always"/>
</menu>