<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--app:cardElevation="0dp"-->
<!--&gt;-->

<!--<ScrollView-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/shadow_popup_window">

    </FrameLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:background="@color/gray_light"
        android:padding="12dp"
        android:text="@string/setting_column"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_center">

    </FrameLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:id="@+id/linear_from_types"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/type_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/type_number"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/type_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/type_formula"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/formula"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/is_edit_cell_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:checked="true"
                    android:padding="3dp"
                    android:text="@string/is_pref_cells"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bold"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:text="@string/b"
                        android:textColor="@color/dark_gray"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <FrameLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/italic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="@string/i"
                            android:textColor="@color/dark_gray"
                            android:textSize="22sp"
                            android:textStyle="bold|italic"/>
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/color_text_frame"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="A"
                                android:textColor="@color/dark_gray"
                                android:textSize="24sp"/>

                            <FrameLayout
                                android:id="@+id/color_text"
                                android:layout_width="24dp"
                                android:layout_height="8dp"
                                android:background="@color/dark_gray">

                            </FrameLayout>
                        </LinearLayout>
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/color_back_frame"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1">

                        <FrameLayout
                            android:layout_width="28dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:foreground="@drawable/contur_color_back">

                            <FrameLayout
                                android:id="@+id/color_back"
                                android:layout_width="24dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center">

                            </FrameLayout>

                        </FrameLayout>

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/down_size_text"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/text_size"
                            android:src="@drawable/ic_size_text_down">

                        </ImageButton>

                        <TextView
                            android:id="@+id/size_text"
                            android:layout_width="50dp"
                            android:layout_height="40dp"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="14"/>

                        <ImageButton
                            android:id="@+id/up_size_text"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/text_size"
                            android:src="@drawable/ic_size_text_up">

                        </ImageButton>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/gray_center">

            </FrameLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:text="@string/paddings"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/in_left"
                        android:textColor="@color/dark_gray"/>

                    <Spinner
                        android:id="@+id/spinner_left_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:dropDownWidth="60dp"
                        android:entries="@array/padding_array"
                        android:gravity="center"
                        android:splitMotionEvents="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/in_right"
                        android:textColor="@color/dark_gray"/>

                    <Spinner
                        android:id="@+id/spinner_right_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:dropDownWidth="60dp"
                        android:entries="@array/padding_array"
                        android:gravity="center"
                        android:splitMotionEvents="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/in_up"
                        android:textColor="@color/dark_gray"/>

                    <Spinner
                        android:id="@+id/spinner_up_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:dropDownWidth="60dp"
                        android:entries="@array/padding_array"
                        android:gravity="center"
                        android:splitMotionEvents="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/in_down"
                        android:textColor="@color/dark_gray"/>

                    <Spinner
                        android:id="@+id/spinner_down_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:dropDownWidth="60dp"
                        android:entries="@array/padding_array"
                        android:gravity="center"
                        android:splitMotionEvents="true"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
    <!--</ScrollView>-->

    <!--</android.support.v7.widget.CardView>-->
