<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--app:cardElevation="0dp"-->
<!--&gt;-->

<!--<ScrollView-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:orientation="vertical"
              android:paddingBottom="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow_popup_window">

    </FrameLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:background="@color/gray_light"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:text="@string/setting_table"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_center">

    </FrameLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            >


            <Switch
                android:id="@+id/fixed_height_switch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/fixed_height"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_center">

            </FrameLayout>

            <Switch
                android:id="@+id/always_fit_to_screen_width"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/always_fit_to_screen"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_center">

            </FrameLayout>

            <Switch
                android:id="@+id/total_amount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/show_total_amount"/>

            <!--<TextView-->
                <!--android:id="@+id/date_variable"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_margin="16dp"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/date_variable_setting"-->
                <!--android:textColor="@color/dark_gray"-->
                <!--android:textSize="14sp"/>-->

            <!--<FrameLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/gray_center">-->

            <!--</FrameLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_margin="16dp"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:id="@+id/textView2"-->
                    <!--android:layout_width="40dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_marginRight="8dp"-->
                    <!--android:background="@drawable/ic_scale"-->
                    <!--android:gravity="center"-->
                    <!--android:rotation="90"-->
                    <!--android:scaleX="0.7"-->
                    <!--android:scaleY="0.7"/>-->

                <!--<ImageButton-->
                    <!--android:id="@+id/imageButton"-->
                    <!--android:layout_width="40dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--android:tint="@color/dark_gray"-->
                    <!--app:srcCompat="@drawable/ic_operand_minus"/>-->

                <!--<SeekBar-->
                    <!--android:id="@+id/seekBar2"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@android:color/transparent"/>-->

                <!--<ImageButton-->
                    <!--android:id="@+id/imageButton2"-->
                    <!--android:layout_width="40dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--android:scaleX="0.8"-->
                    <!--android:scaleY="0.8"-->
                    <!--android:tint="@color/dark_gray"-->
                    <!--app:srcCompat="@drawable/ic_add_button"/>-->

                <!--<Button-->
                    <!--android:id="@+id/button"-->
                    <!--android:layout_width="40dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_marginLeft="16dp"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--android:text="100%"/>-->
            <!--</LinearLayout>-->

        </LinearLayout>
    </ScrollView>
</LinearLayout>
    <!--</ScrollView>-->

    <!--</android.support.v7.widget.CardView>-->
